--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
       <input type="password" id="passwordInput" />
       <button type="button" id="submitData">Register</button>
     </form>
+    <button id="closeBtn">Quit</button>
 
     <p id="userEmail"></p>
   </body>
@@ -66,5 +67,10 @@
         const errorMessage = error.message;
         // ..
       });
+  });
+
+  document.getElementById("closeBtn").addEventListener("click", () => {
+    // Send a message to request window closure
+    window.api.send("quit");
   });
 </script>
