split the code in diffrent scripts up -> cleaner

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <title>MofaCH</title>
     <link rel="stylesheet" href="index.css" />
+    <script type="module" src="firebaseConfig.js"></script>
+    <script type="module" src="auth.js"></script>
+    <script type="module" src="firestore.js"></script>
+    <script type="module" src="main.js"></script>
+    <script type="module" src="liveChat.js"></script>
     <!-- <script defer src="render.js"></script> -->
   </head>
   <body>
@@ -89,254 +94,3 @@
     </div>
   </body>
 </html>
-
-<script type="module">
-  // Import the functions you need from the SDKs you need
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js";
-  import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-analytics.js";
-  import {
-    getFirestore,
-    doc,
-    setDoc,
-    getDoc,
-    collection,
-    onSnapshot,
-    query,
-    orderBy,
-  } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js";
-  import {
-    getAuth,
-    createUserWithEmailAndPassword,
-    signInWithEmailAndPassword,
-    signOut,
-  } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-auth.js";
-
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  const firebaseConfig = {
-    apiKey: "AIzaSyCWr3sEgXv2kJbUf-fUdQPc0Fl4PgcTf1I",
-    authDomain: "mofach-49f97.firebaseapp.com",
-    projectId: "mofach-49f97",
-    storageBucket: "mofach-49f97.appspot.com",
-    messagingSenderId: "239334965682",
-    appId: "1:239334965682:web:820b4e5f1158c5b7cde4ab",
-    measurementId: "G-36GK6STHNE",
-  };
-
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const analytics = getAnalytics(app);
-  const auth = getAuth(app);
-  const db = getFirestore(app);
-
-  let user;
-  //on start
-  document.getElementById("settingsPanel").style.display = "none";
-  document.getElementById("profilePanel").style.display = "none";
-  checkIfLoggedIn();
-
-  function checkIfLoggedIn() {
-    if (!user) {
-      document.getElementById("registerBTN").style.display = "none";
-      document.getElementById("loginBTN").style.display = "block";
-      document.getElementById("changeToRegister").style.display = "block";
-      document.getElementById("changeToLogin").style.display = "none";
-      document.getElementById("settingsPanel").style.display = "none";
-      document.getElementById("profilePanel").style.display = "none";
-      document.getElementById("loginPanel").style.display = "block";
-      document.getElementById("LiveChat").style.display = "none";
-
-      document.getElementById("mainPanel").style.display = "none";
-    } else {
-      document.getElementById("registerBTN").style.display = "none";
-      document.getElementById("loginBTN").style.display = "none";
-      document.getElementById("changeToRegister").style.display = "none";
-      document.getElementById("changeToLogin").style.display = "none";
-      document.getElementById("LiveChat").style.display = "none";
-
-      document.getElementById("mainPanel").style.display = "block";
-    }
-  }
-
-  liveChatBtn.addEventListener("click", (e) => {
-    document.getElementById("LiveChat").style.display = "block";
-    document.getElementById("settingsPanel").style.display = "none";
-    document.getElementById("profilePanel").style.display = "none";
-  });
-
-  //when changeToRegister button clicked, show register button and inputs
-  changeToRegister.addEventListener("click", (e) => {
-    document.getElementById("registerBTN").style.display = "block";
-    document.getElementById("loginBTN").style.display = "none";
-    document.getElementById("changeToRegister").style.display = "none";
-    document.getElementById("changeToLogin").style.display = "block";
-  });
-  //when changeToLogin button clicked, show login button and inputs
-  changeToLogin.addEventListener("click", (e) => {
-    document.getElementById("registerBTN").style.display = "none";
-    document.getElementById("loginBTN").style.display = "block";
-    document.getElementById("changeToRegister").style.display = "block";
-    document.getElementById("changeToLogin").style.display = "none";
-  });
-
-  registerBTN.addEventListener("click", (e) => {
-    let email = document.getElementById("emailInput").value;
-    let password = document.getElementById("passwordInput").value;
-
-    createUserWithEmailAndPassword(auth, email, password)
-      .then((userCredential) => {
-        // Signed up
-        user = userCredential.user;
-        document.getElementById("loginPanel").style.display = "none";
-        document.getElementById("mainPanel").style.display = "block";
-
-        //clear input fields
-        document.getElementById("emailInput").value = "";
-        document.getElementById("passwordInput").value = "";
-
-        setDoc(doc(db, "Users", user.email), {
-          Email: user.email,
-        });
-      })
-      .catch((error) => {
-        const errorCode = error.code;
-        const errorMessage = error.message;
-      });
-  });
-
-  loginBTN.addEventListener("click", (e) => {
-    let email = document.getElementById("emailInput").value;
-    let password = document.getElementById("passwordInput").value;
-
-    signInWithEmailAndPassword(auth, email, password)
-      .then((userCredential) => {
-        // Signed up
-        user = userCredential.user;
-        document.getElementById("loginPanel").style.display = "none";
-        document.getElementById("mainPanel").style.display = "block";
-
-        //clear input fields
-        document.getElementById("emailInput").value = "";
-        document.getElementById("passwordInput").value = "";
-      })
-      .catch((error) => {
-        const errorCode = error.code;
-        const errorMessage = error.message;
-      });
-  });
-
-  saveProfileBtn.addEventListener("click", (e) => {
-    setDoc(doc(db, "Users", user.email), {
-      Email: user.email,
-      username: document.getElementById("userNameInput").value,
-      firstname: document.getElementById("firstnameInput").value,
-      secondname: document.getElementById("secondnameInput").value,
-      biography: document.getElementById("biographyInput").value,
-    });
-  });
-
-  logoutProfile.addEventListener("click", (e) => {
-    signOut(auth)
-      .then(() => {
-        // Sign-out successful.
-        console.log("signed out!");
-        user = null;
-        checkIfLoggedIn();
-      })
-      .catch((error) => {
-        // An error happened.
-        console.log("error while logout!: " + error);
-      });
-  });
-
-  document.getElementById("settingsBtn").addEventListener("click", () => {
-    //open settings panel
-    document.getElementById("settingsPanel").style.display = "block";
-    document.getElementById("profilePanel").style.display = "none";
-    document.getElementById("LiveChat").style.display = "none";
-  });
-
-  document.getElementById("profileBtn").addEventListener("click", () => {
-    // open profile panel
-    document.getElementById("profilePanel").style.display = "block";
-    document.getElementById("settingsPanel").style.display = "none";
-    document.getElementById("LiveChat").style.display = "none";
-
-    // get profile data
-    getDoc(doc(db, "Users", user.email)).then((docSnapshot) => {
-      if (docSnapshot.exists()) {
-        const data = docSnapshot.data();
-
-        // Set the input values
-        document.getElementById("userNameInput").value = data.username;
-        document.getElementById("firstnameInput").value = data.firstname;
-        document.getElementById("secondnameInput").value = data.secondname;
-        document.getElementById("biographyInput").value = data.biography;
-      }
-    });
-  });
-
-  document.getElementById("settingsBack").addEventListener("click", () => {
-    //open settings panel
-    document.getElementById("settingsPanel").style.display = "none";
-  });
-
-  document.getElementById("profileBack").addEventListener("click", () => {
-    //open profile panel
-    document.getElementById("profilePanel").style.display = "none";
-  });
-
-  document.getElementById("closeBtn").addEventListener("click", () => {
-    // Send a message to request window closure
-    window.api.send("quit");
-  });
-
-  function makeid(length) {
-    let result = "";
-    const characters =
-      "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789";
-    const charactersLength = characters.length;
-    let counter = 0;
-    while (counter < length) {
-      result += characters.charAt(Math.floor(Math.random() * charactersLength));
-      counter += 1;
-    }
-    return result;
-  }
-
-  document.getElementById("sendMessage").addEventListener("click", (e) => {
-    const timestamp = Date.now(); // Get the current timestamp
-
-    setDoc(doc(db, "LiveChat", makeid(10)), {
-      username: user.email,
-      message: document.getElementById("messageInput").value,
-      timestamp: timestamp, // Set the timestamp in the document
-    });
-
-    document.getElementById("messageInput").value = "";
-  });
-
-  onSnapshot(
-    query(collection(db, "LiveChat"), orderBy("timestamp")),
-    (querySnapshot) => {
-      const liveChatContainer = document.getElementById("LiveChatMessages");
-
-      // Clear any existing content in the container
-      liveChatContainer.innerHTML = "";
-
-      querySnapshot.forEach((doc) => {
-        const data = doc.data();
-        const message = data.message;
-        const username = data.username;
-        const timestamp = data.timestamp;
-
-        // Create a new <p> element for each message
-        const newPTag = document.createElement("p");
-        newPTag.textContent = username + ": " + message;
-
-        // Append the <p> element to the container
-        liveChatContainer.appendChild(newPTag);
-      });
-    }
-  );
-</script>
