bug: livechat app long text goes over the div

--- a/src/index.html
+++ b/src/index.html
@@ -82,10 +82,7 @@
     </div>
 
     <div id="LiveChat">
-      <div id="LiveChatHolder">
-        <div id="LiveChatMessagesLeft"></div>
-        <div id="LiveChatMessagesRight"></div>
-      </div>
+      <div id="LiveChatHolder"></div>
 
       <div id="textInputPanel">
         <button id="sendMessage">senden</button>
